Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORDER
    CORIZQ
    LLAVDER
    LLAVIZQ
    NULO
    PUNTO

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instruccionesglb
Rule 2     instruccionesglb -> instruccionesglb instruccionglb
Rule 3     instruccionesglb -> instruccionglb
Rule 4     instruccionglb -> funcionINS PUNTOCOMA
Rule 5     instruccionglb -> declaracionglb PUNTOCOMA
Rule 6     instruccionglb -> printINS PUNTOCOMA
Rule 7     instruccionglb -> llamadaFunc PUNTOCOMA
Rule 8     instruccionglb -> ifINS PUNTOCOMA
Rule 9     instruccionglb -> whileINS PUNTOCOMA
Rule 10    instruccionglb -> forINS PUNTOCOMA
Rule 11    declaracionglb -> ID
Rule 12    declaracionglb -> ID IGUAL expresion
Rule 13    declaracionglb -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 14    funcionINS -> FUNCTION ID PARIZQ PARDER sentencia END
Rule 15    funcionINS -> FUNCTION ID PARIZQ params PARDER sentencia END
Rule 16    params -> params COMA ID
Rule 17    params -> ID
Rule 18    llamadaFunc -> ID PARIZQ PARDER
Rule 19    llamadaFunc -> ID PARIZQ listParams PARDER
Rule 20    listParams -> listParams COMA expresion
Rule 21    listParams -> expresion
Rule 22    returnINS -> RETURN
Rule 23    returnINS -> RETURN expresion
Rule 24    instrucciones -> instrucciones instruccion
Rule 25    instrucciones -> instruccion
Rule 26    instruccion -> printINS PUNTOCOMA
Rule 27    instruccion -> ifINS PUNTOCOMA
Rule 28    instruccion -> declaracionINS PUNTOCOMA
Rule 29    instruccion -> llamadaFunc PUNTOCOMA
Rule 30    instruccion -> returnINS PUNTOCOMA
Rule 31    instruccion -> whileINS PUNTOCOMA
Rule 32    instruccion -> forINS PUNTOCOMA
Rule 33    sentencia -> instrucciones
Rule 34    printINS -> PRINTLN PARIZQ expresion PARDER
Rule 35    printINS -> PRINT PARIZQ expresion PARDER
Rule 36    declaracionINS -> ID
Rule 37    declaracionINS -> ID IGUAL expresion
Rule 38    declaracionINS -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 39    declaracionINS -> accesos ID
Rule 40    declaracionINS -> accesos ID IGUAL expresion
Rule 41    declaracionINS -> accesos ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
Rule 42    tipos -> INT64
Rule 43    tipos -> FLOAT64
Rule 44    tipos -> STRING
Rule 45    tipos -> BOOL
Rule 46    tipos -> CHAR
Rule 47    accesos -> LOCAL
Rule 48    accesos -> GLOBAL
Rule 49    whileINS -> WHILE expresion sentencia END
Rule 50    forINS -> FOR ID IN expresion DOSPUNTOS expresion sentencia END
Rule 51    forINS -> FOR ID IN expresion sentencia END
Rule 52    ifINS -> IF expresion sentencia END
Rule 53    ifINS -> IF expresion sentencia ELSE sentencia END
Rule 54    ifINS -> IF expresion sentencia elseIfLista END
Rule 55    elseIfLista -> ELSEIF expresion sentencia
Rule 56    elseIfLista -> ELSEIF expresion sentencia ELSE sentencia
Rule 57    elseIfLista -> ELSEIF expresion sentencia elseIfLista
Rule 58    expresion -> MENOS expresion
Rule 59    expresion -> NOT expresion
Rule 60    expresion -> expresion MAS expresion
Rule 61    expresion -> expresion MENOS expresion
Rule 62    expresion -> expresion MULT expresion
Rule 63    expresion -> expresion DIV expresion
Rule 64    expresion -> expresion MOD expresion
Rule 65    expresion -> expresion POT expresion
Rule 66    expresion -> expresion MAYOR expresion
Rule 67    expresion -> expresion MENOR expresion
Rule 68    expresion -> expresion MAYORIGUAL expresion
Rule 69    expresion -> expresion MENORIGUAL expresion
Rule 70    expresion -> expresion IGUALES expresion
Rule 71    expresion -> expresion DISTINTOS expresion
Rule 72    expresion -> expresion OR expresion
Rule 73    expresion -> expresion AND expresion
Rule 74    expresion -> expValor
Rule 75    expValor -> PARIZQ expresion PARDER
Rule 76    expValor -> INTID
Rule 77    expValor -> FLOATID
Rule 78    expValor -> STRINGID
Rule 79    expValor -> expCHAR
Rule 80    expValor -> expNativas
Rule 81    expValor -> TRUE
Rule 82    expValor -> FALSE
Rule 83    expValor -> ID
Rule 84    expValor -> llamadaFunc
Rule 85    expCHAR -> CHARID
Rule 86    expNativas -> LOG10 PARIZQ expresion PARDER
Rule 87    expNativas -> LOG PARIZQ expresion COMA expresion PARDER
Rule 88    expNativas -> SIN PARIZQ expresion PARDER
Rule 89    expNativas -> COS PARIZQ expresion PARDER
Rule 90    expNativas -> TAN PARIZQ expresion PARDER
Rule 91    expNativas -> SQRT PARIZQ expresion PARDER
Rule 92    expNativas -> UPPERCASE PARIZQ expresion PARDER
Rule 93    expNativas -> LOWERCASE PARIZQ expresion PARDER
Rule 94    expNativas -> PARSE PARIZQ INT64 COMA expresion PARDER
Rule 95    expNativas -> PARSE PARIZQ FLOAT64 COMA expresion PARDER
Rule 96    expNativas -> TRUNC PARIZQ INT64 COMA expresion PARDER
Rule 97    expNativas -> FLOAT PARIZQ expresion PARDER
Rule 98    expNativas -> STRING PARIZQ expresion PARDER
Rule 99    expNativas -> TYPEOF PARIZQ expresion PARDER

Terminals, with rules where they appear

AND                  : 73
BOOL                 : 45
CHAR                 : 46
CHARID               : 85
COMA                 : 16 20 87 94 95 96
CORDER               : 
CORIZQ               : 
COS                  : 89
DISTINTOS            : 71
DIV                  : 63
DOSPUNTOS            : 13 13 38 38 41 41 50
ELSE                 : 53 56
ELSEIF               : 55 56 57
END                  : 14 15 49 50 51 52 53 54
FALSE                : 82
FLOAT                : 97
FLOAT64              : 43 95
FLOATID              : 77
FOR                  : 50 51
FUNCTION             : 14 15
GLOBAL               : 48
ID                   : 11 12 13 14 15 16 17 18 19 36 37 38 39 40 41 50 51 83
IF                   : 52 53 54
IGUAL                : 12 13 37 38 40 41
IGUALES              : 70
IN                   : 50 51
INT64                : 42 94 96
INTID                : 76
LLAVDER              : 
LLAVIZQ              : 
LOCAL                : 47
LOG                  : 87
LOG10                : 86
LOWERCASE            : 93
MAS                  : 60
MAYOR                : 66
MAYORIGUAL           : 68
MENOR                : 67
MENORIGUAL           : 69
MENOS                : 58 61
MOD                  : 64
MULT                 : 62
NOT                  : 59
NULO                 : 
OR                   : 72
PARDER               : 14 15 18 19 34 35 75 86 87 88 89 90 91 92 93 94 95 96 97 98 99
PARIZQ               : 14 15 18 19 34 35 75 86 87 88 89 90 91 92 93 94 95 96 97 98 99
PARSE                : 94 95
POT                  : 65
PRINT                : 35
PRINTLN              : 34
PUNTO                : 
PUNTOCOMA            : 4 5 6 7 8 9 10 26 27 28 29 30 31 32
RETURN               : 22 23
SIN                  : 88
SQRT                 : 91
STRING               : 44 98
STRINGID             : 78
TAN                  : 90
TRUE                 : 81
TRUNC                : 96
TYPEOF               : 99
UPPERCASE            : 92
WHILE                : 49
error                : 

Nonterminals, with rules where they appear

accesos              : 39 40 41
declaracionINS       : 28
declaracionglb       : 5
elseIfLista          : 54 57
expCHAR              : 79
expNativas           : 80
expValor             : 74
expresion            : 12 13 20 21 23 34 35 37 38 40 41 49 50 50 51 52 53 54 55 56 57 58 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 75 86 87 87 88 89 90 91 92 93 94 95 96 97 98 99
forINS               : 10 32
funcionINS           : 4
ifINS                : 8 27
inicio               : 0
instruccion          : 24 25
instrucciones        : 24 33
instruccionesglb     : 1 2
instruccionglb       : 2 3
listParams           : 19 20
llamadaFunc          : 7 29 84
params               : 15 16
printINS             : 6 26
returnINS            : 30
sentencia            : 14 15 49 50 51 52 53 53 54 55 56 56 57
tipos                : 13 38 41
whileINS             : 9 31

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instruccionesglb
    (2) instruccionesglb -> . instruccionesglb instruccionglb
    (3) instruccionesglb -> . instruccionglb
    (4) instruccionglb -> . funcionINS PUNTOCOMA
    (5) instruccionglb -> . declaracionglb PUNTOCOMA
    (6) instruccionglb -> . printINS PUNTOCOMA
    (7) instruccionglb -> . llamadaFunc PUNTOCOMA
    (8) instruccionglb -> . ifINS PUNTOCOMA
    (9) instruccionglb -> . whileINS PUNTOCOMA
    (10) instruccionglb -> . forINS PUNTOCOMA
    (14) funcionINS -> . FUNCTION ID PARIZQ PARDER sentencia END
    (15) funcionINS -> . FUNCTION ID PARIZQ params PARDER sentencia END
    (11) declaracionglb -> . ID
    (12) declaracionglb -> . ID IGUAL expresion
    (13) declaracionglb -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (34) printINS -> . PRINTLN PARIZQ expresion PARDER
    (35) printINS -> . PRINT PARIZQ expresion PARDER
    (18) llamadaFunc -> . ID PARIZQ PARDER
    (19) llamadaFunc -> . ID PARIZQ listParams PARDER
    (52) ifINS -> . IF expresion sentencia END
    (53) ifINS -> . IF expresion sentencia ELSE sentencia END
    (54) ifINS -> . IF expresion sentencia elseIfLista END
    (49) whileINS -> . WHILE expresion sentencia END
    (50) forINS -> . FOR ID IN expresion DOSPUNTOS expresion sentencia END
    (51) forINS -> . FOR ID IN expresion sentencia END

    FUNCTION        shift and go to state 11
    ID              shift and go to state 12
    PRINTLN         shift and go to state 13
    PRINT           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17

    inicio                         shift and go to state 1
    instruccionesglb               shift and go to state 2
    instruccionglb                 shift and go to state 3
    funcionINS                     shift and go to state 4
    declaracionglb                 shift and go to state 5
    printINS                       shift and go to state 6
    llamadaFunc                    shift and go to state 7
    ifINS                          shift and go to state 8
    whileINS                       shift and go to state 9
    forINS                         shift and go to state 10

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instruccionesglb .
    (2) instruccionesglb -> instruccionesglb . instruccionglb
    (4) instruccionglb -> . funcionINS PUNTOCOMA
    (5) instruccionglb -> . declaracionglb PUNTOCOMA
    (6) instruccionglb -> . printINS PUNTOCOMA
    (7) instruccionglb -> . llamadaFunc PUNTOCOMA
    (8) instruccionglb -> . ifINS PUNTOCOMA
    (9) instruccionglb -> . whileINS PUNTOCOMA
    (10) instruccionglb -> . forINS PUNTOCOMA
    (14) funcionINS -> . FUNCTION ID PARIZQ PARDER sentencia END
    (15) funcionINS -> . FUNCTION ID PARIZQ params PARDER sentencia END
    (11) declaracionglb -> . ID
    (12) declaracionglb -> . ID IGUAL expresion
    (13) declaracionglb -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (34) printINS -> . PRINTLN PARIZQ expresion PARDER
    (35) printINS -> . PRINT PARIZQ expresion PARDER
    (18) llamadaFunc -> . ID PARIZQ PARDER
    (19) llamadaFunc -> . ID PARIZQ listParams PARDER
    (52) ifINS -> . IF expresion sentencia END
    (53) ifINS -> . IF expresion sentencia ELSE sentencia END
    (54) ifINS -> . IF expresion sentencia elseIfLista END
    (49) whileINS -> . WHILE expresion sentencia END
    (50) forINS -> . FOR ID IN expresion DOSPUNTOS expresion sentencia END
    (51) forINS -> . FOR ID IN expresion sentencia END

    $end            reduce using rule 1 (inicio -> instruccionesglb .)
    FUNCTION        shift and go to state 11
    ID              shift and go to state 12
    PRINTLN         shift and go to state 13
    PRINT           shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    FOR             shift and go to state 17

    instruccionglb                 shift and go to state 18
    funcionINS                     shift and go to state 4
    declaracionglb                 shift and go to state 5
    printINS                       shift and go to state 6
    llamadaFunc                    shift and go to state 7
    ifINS                          shift and go to state 8
    whileINS                       shift and go to state 9
    forINS                         shift and go to state 10

state 3

    (3) instruccionesglb -> instruccionglb .

    FUNCTION        reduce using rule 3 (instruccionesglb -> instruccionglb .)
    ID              reduce using rule 3 (instruccionesglb -> instruccionglb .)
    PRINTLN         reduce using rule 3 (instruccionesglb -> instruccionglb .)
    PRINT           reduce using rule 3 (instruccionesglb -> instruccionglb .)
    IF              reduce using rule 3 (instruccionesglb -> instruccionglb .)
    WHILE           reduce using rule 3 (instruccionesglb -> instruccionglb .)
    FOR             reduce using rule 3 (instruccionesglb -> instruccionglb .)
    $end            reduce using rule 3 (instruccionesglb -> instruccionglb .)


state 4

    (4) instruccionglb -> funcionINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 19


state 5

    (5) instruccionglb -> declaracionglb . PUNTOCOMA

    PUNTOCOMA       shift and go to state 20


state 6

    (6) instruccionglb -> printINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 21


state 7

    (7) instruccionglb -> llamadaFunc . PUNTOCOMA

    PUNTOCOMA       shift and go to state 22


state 8

    (8) instruccionglb -> ifINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 23


state 9

    (9) instruccionglb -> whileINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 10

    (10) instruccionglb -> forINS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 25


state 11

    (14) funcionINS -> FUNCTION . ID PARIZQ PARDER sentencia END
    (15) funcionINS -> FUNCTION . ID PARIZQ params PARDER sentencia END

    ID              shift and go to state 26


state 12

    (11) declaracionglb -> ID .
    (12) declaracionglb -> ID . IGUAL expresion
    (13) declaracionglb -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipos
    (18) llamadaFunc -> ID . PARIZQ PARDER
    (19) llamadaFunc -> ID . PARIZQ listParams PARDER

    PUNTOCOMA       reduce using rule 11 (declaracionglb -> ID .)
    IGUAL           shift and go to state 27
    PARIZQ          shift and go to state 28


state 13

    (34) printINS -> PRINTLN . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 29


state 14

    (35) printINS -> PRINT . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 30


state 15

    (52) ifINS -> IF . expresion sentencia END
    (53) ifINS -> IF . expresion sentencia ELSE sentencia END
    (54) ifINS -> IF . expresion sentencia elseIfLista END
    (58) expresion -> . MENOS expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion MAS expresion
    (61) expresion -> . expresion MENOS expresion
    (62) expresion -> . expresion MULT expresion
    (63) expresion -> . expresion DIV expresion
    (64) expresion -> . expresion MOD expresion
    (65) expresion -> . expresion POT expresion
    (66) expresion -> . expresion MAYOR expresion
    (67) expresion -> . expresion MENOR expresion
    (68) expresion -> . expresion MAYORIGUAL expresion
    (69) expresion -> . expresion MENORIGUAL expresion
    (70) expresion -> . expresion IGUALES expresion
    (71) expresion -> . expresion DISTINTOS expresion
    (72) expresion -> . expresion OR expresion
    (73) expresion -> . expresion AND expresion
    (74) expresion -> . expValor
    (75) expValor -> . PARIZQ expresion PARDER
    (76) expValor -> . INTID
    (77) expValor -> . FLOATID
    (78) expValor -> . STRINGID
    (79) expValor -> . expCHAR
    (80) expValor -> . expNativas
    (81) expValor -> . TRUE
    (82) expValor -> . FALSE
    (83) expValor -> . ID
    (84) expValor -> . llamadaFunc
    (85) expCHAR -> . CHARID
    (86) expNativas -> . LOG10 PARIZQ expresion PARDER
    (87) expNativas -> . LOG PARIZQ expresion COMA expresion PARDER
    (88) expNativas -> . SIN PARIZQ expresion PARDER
    (89) expNativas -> . COS PARIZQ expresion PARDER
    (90) expNativas -> . TAN PARIZQ expresion PARDER
    (91) expNativas -> . SQRT PARIZQ expresion PARDER
    (92) expNativas -> . UPPERCASE PARIZQ expresion PARDER
    (93) expNativas -> . LOWERCASE PARIZQ expresion PARDER
    (94) expNativas -> . PARSE PARIZQ INT64 COMA expresion PARDER
    (95) expNativas -> . PARSE PARIZQ FLOAT64 COMA expresion PARDER
    (96) expNativas -> . TRUNC PARIZQ INT64 COMA expresion PARDER
    (97) expNativas -> . FLOAT PARIZQ expresion PARDER
    (98) expNativas -> . STRING PARIZQ expresion PARDER
    (99) expNativas -> . TYPEOF PARIZQ expresion PARDER
    (18) llamadaFunc -> . ID PARIZQ PARDER
    (19) llamadaFunc -> . ID PARIZQ listParams PARDER

    MENOS           shift and go to state 32
    NOT             shift and go to state 33
    PARIZQ          shift and go to state 35
    INTID           shift and go to state 36
    FLOATID         shift and go to state 37
    STRINGID        shift and go to state 38
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42
    ID              shift and go to state 43
    CHARID          shift and go to state 45
    LOG10           shift and go to state 46
    LOG             shift and go to state 47
    SIN             shift and go to state 48
    COS             shift and go to state 49
    TAN             shift and go to state 50
    SQRT            shift and go to state 51
    UPPERCASE       shift and go to state 52
    LOWERCASE       shift and go to state 53
    PARSE           shift and go to state 54
    TRUNC           shift and go to state 55
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    TYPEOF          shift and go to state 58

    expresion                      shift and go to state 31
    expValor                       shift and go to state 34
    expCHAR                        shift and go to state 39
    expNativas                     shift and go to state 40
    llamadaFunc                    shift and go to state 44

state 16

    (49) whileINS -> WHILE . expresion sentencia END
    (58) expresion -> . MENOS expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion MAS expresion
    (61) expresion -> . expresion MENOS expresion
    (62) expresion -> . expresion MULT expresion
    (63) expresion -> . expresion DIV expresion
    (64) expresion -> . expresion MOD expresion
    (65) expresion -> . expresion POT expresion
    (66) expresion -> . expresion MAYOR expresion
    (67) expresion -> . expresion MENOR expresion
    (68) expresion -> . expresion MAYORIGUAL expresion
    (69) expresion -> . expresion MENORIGUAL expresion
    (70) expresion -> . expresion IGUALES expresion
    (71) expresion -> . expresion DISTINTOS expresion
    (72) expresion -> . expresion OR expresion
    (73) expresion -> . expresion AND expresion
    (74) expresion -> . expValor
    (75) expValor -> . PARIZQ expresion PARDER
    (76) expValor -> . INTID
    (77) expValor -> . FLOATID
    (78) expValor -> . STRINGID
    (79) expValor -> . expCHAR
    (80) expValor -> . expNativas
    (81) expValor -> . TRUE
    (82) expValor -> . FALSE
    (83) expValor -> . ID
    (84) expValor -> . llamadaFunc
    (85) expCHAR -> . CHARID
    (86) expNativas -> . LOG10 PARIZQ expresion PARDER
    (87) expNativas -> . LOG PARIZQ expresion COMA expresion PARDER
    (88) expNativas -> . SIN PARIZQ expresion PARDER
    (89) expNativas -> . COS PARIZQ expresion PARDER
    (90) expNativas -> . TAN PARIZQ expresion PARDER
    (91) expNativas -> . SQRT PARIZQ expresion PARDER
    (92) expNativas -> . UPPERCASE PARIZQ expresion PARDER
    (93) expNativas -> . LOWERCASE PARIZQ expresion PARDER
    (94) expNativas -> . PARSE PARIZQ INT64 COMA expresion PARDER
    (95) expNativas -> . PARSE PARIZQ FLOAT64 COMA expresion PARDER
    (96) expNativas -> . TRUNC PARIZQ INT64 COMA expresion PARDER
    (97) expNativas -> . FLOAT PARIZQ expresion PARDER
    (98) expNativas -> . STRING PARIZQ expresion PARDER
    (99) expNativas -> . TYPEOF PARIZQ expresion PARDER
    (18) llamadaFunc -> . ID PARIZQ PARDER
    (19) llamadaFunc -> . ID PARIZQ listParams PARDER

    MENOS           shift and go to state 32
    NOT             shift and go to state 33
    PARIZQ          shift and go to state 35
    INTID           shift and go to state 36
    FLOATID         shift and go to state 37
    STRINGID        shift and go to state 38
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42
    ID              shift and go to state 43
    CHARID          shift and go to state 45
    LOG10           shift and go to state 46
    LOG             shift and go to state 47
    SIN             shift and go to state 48
    COS             shift and go to state 49
    TAN             shift and go to state 50
    SQRT            shift and go to state 51
    UPPERCASE       shift and go to state 52
    LOWERCASE       shift and go to state 53
    PARSE           shift and go to state 54
    TRUNC           shift and go to state 55
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    TYPEOF          shift and go to state 58

    expresion                      shift and go to state 59
    expValor                       shift and go to state 34
    expCHAR                        shift and go to state 39
    expNativas                     shift and go to state 40
    llamadaFunc                    shift and go to state 44

state 17

    (50) forINS -> FOR . ID IN expresion DOSPUNTOS expresion sentencia END
    (51) forINS -> FOR . ID IN expresion sentencia END

    ID              shift and go to state 60


state 18

    (2) instruccionesglb -> instruccionesglb instruccionglb .

    FUNCTION        reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    ID              reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    PRINTLN         reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    PRINT           reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    IF              reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    WHILE           reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    FOR             reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)
    $end            reduce using rule 2 (instruccionesglb -> instruccionesglb instruccionglb .)


state 19

    (4) instruccionglb -> funcionINS PUNTOCOMA .

    FUNCTION        reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    ID              reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    PRINTLN         reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    PRINT           reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    IF              reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    WHILE           reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    FOR             reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)
    $end            reduce using rule 4 (instruccionglb -> funcionINS PUNTOCOMA .)


state 20

    (5) instruccionglb -> declaracionglb PUNTOCOMA .

    FUNCTION        reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    ID              reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    PRINTLN         reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    PRINT           reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    IF              reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    WHILE           reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    FOR             reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)
    $end            reduce using rule 5 (instruccionglb -> declaracionglb PUNTOCOMA .)


state 21

    (6) instruccionglb -> printINS PUNTOCOMA .

    FUNCTION        reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    ID              reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    PRINTLN         reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    PRINT           reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    IF              reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    WHILE           reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    FOR             reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)
    $end            reduce using rule 6 (instruccionglb -> printINS PUNTOCOMA .)


state 22

    (7) instruccionglb -> llamadaFunc PUNTOCOMA .

    FUNCTION        reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    ID              reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    PRINTLN         reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    PRINT           reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    IF              reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    WHILE           reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    FOR             reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)
    $end            reduce using rule 7 (instruccionglb -> llamadaFunc PUNTOCOMA .)


state 23

    (8) instruccionglb -> ifINS PUNTOCOMA .

    FUNCTION        reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    ID              reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    PRINTLN         reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    PRINT           reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    IF              reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    WHILE           reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    FOR             reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)
    $end            reduce using rule 8 (instruccionglb -> ifINS PUNTOCOMA .)


state 24

    (9) instruccionglb -> whileINS PUNTOCOMA .

    FUNCTION        reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    ID              reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    PRINTLN         reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    PRINT           reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    IF              reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    WHILE           reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    FOR             reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)
    $end            reduce using rule 9 (instruccionglb -> whileINS PUNTOCOMA .)


state 25

    (10) instruccionglb -> forINS PUNTOCOMA .

    FUNCTION        reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    ID              reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    PRINTLN         reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    PRINT           reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    IF              reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    WHILE           reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    FOR             reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)
    $end            reduce using rule 10 (instruccionglb -> forINS PUNTOCOMA .)


state 26

    (14) funcionINS -> FUNCTION ID . PARIZQ PARDER sentencia END
    (15) funcionINS -> FUNCTION ID . PARIZQ params PARDER sentencia END

    PARIZQ          shift and go to state 61


state 27

    (12) declaracionglb -> ID IGUAL . expresion
    (13) declaracionglb -> ID IGUAL . expresion DOSPUNTOS DOSPUNTOS tipos
    (58) expresion -> . MENOS expresion
    (59) expresion -> . NOT expresion
    (60) expresion -> . expresion MAS expresion
    (61) expresion -> . expresion MENOS expresion
    (62) expresion -> . expresion MULT expresion
    (63) expresion -> . expresion DIV expresion
    (64) expresion -> . expresion MOD expresion
    (65) expresion -> . expresion POT expresion
    (66) expresion -> . expresion MAYOR expresion
    (67) expresion -> . expresion MENOR expresion
    (68) expresion -> . expresion MAYORIGUAL expresion
    (69) expresion -> . expresion MENORIGUAL expresion
    (70) expresion -> . expresion IGUALES expresion
    (71) expresion -> . expresion DISTINTOS expresion
    (72) expresion -> . expresion OR expresion
    (73) expresion -> . expresion AND expresion
    (74) expresion -> . expValor
    (75) expValor -> . PARIZQ expresion PARDER
    (76) expValor -> . INTID
    (77) expValor -> . FLOATID
    (78) expValor -> . STRINGID
    (79) expValor -> . expCHAR
    (80) expValor -> . expNativas
    (81) expValor -> . TRUE
    (82) expValor -> . FALSE
    (83) expValor -> . ID
    (84) expValor -> . llamadaFunc
    (85) expCHAR -> . CHARID
    (86) expNativas -> . LOG10 PARIZQ expresion PARDER
    (87) expNativas -> . LOG PARIZQ expresion COMA expresion PARDER
    (88) expNativas -> . SIN PARIZQ expresion PARDER
    (89) expNativas -> . COS PARIZQ expresion PARDER
    (90) expNativas -> . TAN PARIZQ expresion PARDER
    (91) expNativas -> . SQRT PARIZQ expresion PARDER
    (92) expNativas -> . UPPERCASE PARIZQ expresion PARDER
    (93) expNativas -> . LOWERCASE PARIZQ expresion PARDER
    (94) expNativas -> . PARSE PARIZQ INT64 COMA expresion PARDER
    (95) expNativas -> . PARSE PARIZQ FLOAT64 COMA expresion PARDER
    (96) expNativas -> . TRUNC PARIZQ INT64 COMA expresion PARDER
    (97) expNativas -> . FLOAT PARIZQ expresion PARDER
    (98) expNativas -> . STRING PARIZQ expresion PARDER
    (99) expNativas -> . TYPEOF PARIZQ expresion PARDER
    (18) llamadaFunc -> . ID PARIZQ PARDER
    (19) llamadaFunc -> . ID PARIZQ listParams PARDER

    MENOS           shift and go to state 32
    NOT             shift and go to state 33
    PARIZQ          shift and go to state 35
    INTID           shift and go to state 36
    FLOATID         shift and go to state 37
    STRINGID        shift and go to state 38
    TRUE            shift and go to state 41
    FALSE           shift and go to state 42
    ID              shift and go to state 43
    CHARID          shift and go to state 45
    LOG10           shift and go to state 46
    LOG             shift and go to state 47
    SIN             shift and go to state 48
    COS             shift and go to state 49
    TAN             shift and go to state 50
    SQRT            shift and go to state 51
    UPPERCASE       shift and go to state 52
    LOWERCASE       shift and go to state 53
    PARSE           shift and go to state 54
    TRUNC           shift and go to state 55
    FLOAT           shift and go to state 56
    STRING          shift and go to state 57
    TYPEOF          shift and go to state 58

    expresion                      shift and go to state 62
    expValor                       shift and go to state 34
    expCHAR                        shift and go to state 39
    expNativas                     shift and go to state 40
    llamadaFunc                    shift and go to state 44

state 28
